# landsilide

./: README.md
ecoedu/: .gitignore  .placeholder  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ecoedu/src/app/: layout.tsx
ecoedu_new/: docker-compose.yml  next.config.js  tsconfig.json
ecoedu_new/src/app/: globals.css  page.tsx
landslide/: author.txt  code.txt  index.html  landslide.ipynb - Colab.html  python.py
landslide/landslide.ipynb - Colab_files/: RotateCookiesPage.html  anchor.html  api(1).js.download  api.js.download  bundle.css  css2  js  outputframe(1).html  outputframe.html  proxy.html
tamizhi-bot/: README.md  pyproject.toml
tamizhi-bot/app/: main.py
tamizhi-bot/app/api/: routes.py
tamizhi-bot/app/core/: config.py
tamizhi-bot/app/models/: chat.py  db.py
tamizhi-bot/app/nlp/: detect.py  normalize.py  tanglish.py
tamizhi-bot/app/services/: chat.py  culture.py  intent.py  knowledge.py  math.py  translate.py  tts.py
tamizhi-bot/tests/: test_app.py
tamizhi-bot/ui/: streamlit_app.py
