[tool.poetry]
name = "tamizhi-bot"
version = "0.1.0"
description = "Bilingual Tamil–English AI chatbot"
authors = ["Vimalic <vimalic@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras=["standard"], version="^0.30.0"}
pydantic = "^2.9.2"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.35"
sqlite-utils = "^3.37"
langdetect = "^1.0.9"
indic-nlp-library = "^0.81"
transformers = "^4.44.2"
torch = "^2.3.1"
tokenizers = "^0.19.1"
scikit-learn = "^1.5.1"
spacy = "^3.7.5"
beautifulsoup4 = "^4.12.3"
wikipedia-api = "^0.6.0"
regex = "^2024.7.24"
rapidfuzz = "^3.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx[http2] = "^0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
